# mf2-tools

./: .git-blame-ignore-revs  .gitignore  .rust-toolchain.toml  Cargo.toml  README.md  deno.json  mf2.mft  test.mf2
checker/: Cargo.toml
checker/docs/: ast.d.ts  grammar.md  introduction.md  type-checking.md
checker/src/: ast.rs  grammar.lalrpop  lib.rs  parse_helpers.rs
checker/tests/: parsing.rs
checker/tests/parsing/bounds/: deeply_nested.mft  field_ref.mft  literal.mft  matchers.mft  ref.mft  struct_empty.mft  struct_matcher_binding.mft  struct_matcher_binding_and_bound.mft  struct_names_and_rest.mft  struct_names_only.mft  struct_nested.mft  struct_rest_only.mft  struct_union_in_matcher.mft  struct_with_bounds.mft  union_literals.mft  union_mixed.mft  union_refs.mft  union_struct_precedence.mft  var_ref.mft
checker/tests/parsing/comments/: at_eof_no_newline.mft  between_items.mft  comment_eats_rest_of_line.mft  hash_not_in_string.mft  inside_declaration.mft  leading.mft
checker/tests/parsing/document/: comment_only.mft  empty.mft  mixed_declarations.mft  multiple_traits.mft
checker/tests/parsing/errors/: double_when.mft  empty_impl_body.mft  empty_needs_body.mft  field_ref_with_struct.mft  fn_missing_operand.mft  fn_missing_returns.mft  fn_options_after_returns.mft  fn_wrong_order.mft  keyword_as_field_name.mft  keyword_as_type_name.mft  literal_with_struct.mft  missing_bound.mft  missing_colon.mft  missing_semicolon.mft  option_at_without_var.mft  option_missing_semicolon.mft  struct_double_rest.mft  struct_missing_comma.mft  struct_rest_not_last.mft  struct_trailing_comma.mft  struct_unclosed.mft  top_level_garbage.mft  trait_missing_name.mft  unclosed_brace.mft  union_leading_pipe.mft  union_trailing_pipe.mft  unterminated_string.mft  var_with_struct.mft  when_missing_bound.mft
checker/tests/parsing/fns/: compact_whitespace.mft  empty_options.mft  full.mft  minimal.mft  multiple_options.mft  option_binding.mft  option_binding_and_default.mft  option_default.mft  option_plain.mft  optional_operand.mft  unset_operand.mft
checker/tests/parsing/strings/: empty.mft  escaped_backslash.mft  escaped_quote.mft  special_chars.mft  unknown_escape.mft
checker/tests/parsing/traits/: conditional_needs.mft  conditional_needs_with_body.mft  marker.mft  member.mft  members_and_needs_interleaved.mft  multiple_members.mft  needs.mft  needs_refined.mft  needs_with_body.mft
dprint-plugin/: Cargo.toml  README.md  schema.json
dprint-plugin/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parser.rs
lsp/: Cargo.toml  README.md
lsp/src/: ast_utils.rs  completions.rs  diagnostics.rs  document.rs  documents.rs  lib.rs  main.rs  protocol.rs  scope.rs  semantic_tokens.rs  server.rs
lsp/test/: deno.json  main_test.ts
lsp/test/util/: mod.ts  native.ts  types.ts  wasm.ts
mfr-lsp/: Cargo.toml  README.md
mfr-lsp/src/: document.rs  lib.rs  main.rs  protocol.rs  server.rs
test/: Cargo.toml  analysis_fixtures.rs  fixtures.rs  utils.rs
test/analysis_fixtures/match_selector_type/: input_typed.mf2  input_untyped.mf2  local_typed_literal.mf2  local_typed_variable_untyped.mf2  local_untyped_literal.mf2  local_untyped_variable_typed.mf2  local_untyped_variable_untyped.mf2  undeclared.mf2
test/fixtures/bidi/: annotation_only_isolated.mf2  identifier_markers.mf2  markup.mf2  optional_whitespace.mf2  quoted.mf2  quoted_pattern.mf2  required_whitespace_missing.mf2  variable_markers.mf2
test/fixtures/complex/: empty_lines.mf2  leading_space.mf2  matcher_after_quoted.mf2  missing_body.mf2  multiple_declarations.mf2  multiple_matcher.mf2  multiple_quoted_pattern.mf2  quoted_after_matcher.mf2  trailing_content.mf2  trailing_content_and_space.mf2  unquoted_pattern.mf2  unquoted_pattern_leading_trailing_space.mf2
test/fixtures/expressions/: bidi_variable.mf2  empty.mf2  only_attributes.mf2  variable_1.mf2  variable_2.mf2  variable_3.mf2  variable_4.mf2  variable_empty.mf2  variable_space_after_dollar.mf2
test/fixtures/markup/: close_1.mf2  close_2.mf2  close_3.mf2  invalid_contents_1.mf2  invalid_contents_10.mf2  invalid_contents_2.mf2  invalid_contents_3.mf2  invalid_contents_4.mf2  invalid_contents_5.mf2  invalid_contents_6.mf2  invalid_contents_7.mf2  invalid_contents_8.mf2  invalid_contents_9.mf2  invalid_contents_escape.mf2  invalid_contents_quoted.mf2  invalid_missing_name.mf2  invalid_self_closing_close.mf2  invalid_space_before_ident.mf2  invalid_standalone_space.mf2  missing_closing_brace.mf2  missing_closing_brace_after_self_close.mf2  missing_closing_brace_after_self_close_on_close.mf2  open_1.mf2  open_2.mf2  open_3.mf2  space_prefix.mf2  standalone_1.mf2  standalone_2.mf2  standalone_3.mf2
test/fixtures/resource_mfr/: invalid_dangling_metadata.mfr  invalid_frontmatter_order.mfr  invalid_indented_line.mfr  invalid_malformed_entry_missing_equals.mfr  invalid_multiple_frontmatter.mfr  invalid_section_syntax.mfr  valid_comments_and_blank_lines.mfr  valid_crlf.mfr  valid_equals_in_value_and_multiple_entries.mfr  valid_frontmatter_only.mfr  valid_indented_section_like_text_in_value.mfr  valid_metadata_stack_before_entry.mfr  valid_minimal.mfr  valid_multiline_complex_value.mfr  valid_sections.mfr  valid_unicode_keys_values.mfr
test/fixtures/simple/: closed_brace.mf2  closed_brace_start.mf2  empty.mf2  escape.mf2  invalid_escape_char.mf2  leading_space.mf2  multiline.mf2  null_byte.mf2  null_byte_start.mf2  quoted_pattern.mf2  quoted_pattern_empty.mf2  quoted_pattern_missing_trail.mf2  quoted_pattern_missing_trail_empty.mf2  quoted_pattern_single_close.mf2  text.mf2  unclosed_escape.mf2
(+725 files in other folders)
