[workspace]
members = ["dprint-plugin", "parser", "printer", "lsp", "checker", "test"]
resolver = "2"

[workspace.package]
version = "0.2.0" # for lsp and dprint-plugin, remember to update vscode/ too
edition = "2024"
authors = ["Luca Casonato <hello@lcas.dev>", "Nicolò Ribaudo <hello@nicr.dev>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/lucacasonato/mf2-tools"
