[package]
name = "mf2lsp"
version = "0.1.0-alpha.2"
edition = "2021"

[[bin]]
name = "mf2lsp"
path = "src/main.rs"

[lib]
name = "mf2lsp"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.86"
lsp-server = "0.7.6"
lsp-types = "0.97.0"
mf2-parser = { path = "../parser" }
serde = "1.0.210"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.119"
wasm-bindgen = "=0.2.92"
yoke = { version = "0.7.4", features = ["derive"] }
