[package]
name = "mf2lsp"
version = "0.1.0-alpha.2"
edition = "2021"

[[bin]]
name = "mf2lsp"
path = "src/main.rs"

[lib]
name = "mf2lsp"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
mf2_parser = { path = "../parser" }
mf2_printer = { path = "../printer" }

anyhow = "1.0.86"
lsp-server = "0.7.6"
lsp-types = "0.97.0"
serde = "1.0.210"
serde_json = "1.0.119"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "=0.2.92"
yoke = { version = "0.7.4", features = ["derive"] }
