[package]
name = "mf2lsp"
description = "Language server for MessageFormat 2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mf2lsp"
path = "src/main.rs"

[lib]
name = "mf2lsp"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
mf2_parser = { path = "../parser", version = "0.2.0" }
mf2_printer = { path = "../printer", version = "0.2.0" }

anyhow = "1.0.86"
lsp-server = "0.7.6"
lsp-types = "0.97.0"
serde = "1.0.210"
serde_json = "1.0.119"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "=0.2.92"
yoke = { version = "0.7.4", features = ["derive"] }
